--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="dbname_user_account_settings">user_account_settings</string>
 
 
+    <!-- Intent Extras -->
+    <string name="calling_activity">calling_activity</string>
 
+    <!-- activity names -->
+    <string name="profile_activity">Profile Activity</string>
 
 </resources>
