part43 - Setup Gallery and Photo Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <!-- strings -->
     <string name="gallery">GALLERY</string>
     <string name="photo">PHOTO</string>
+    <string name="string_open_camera">Open Camera</string>
 
 
 </resources>
