part48 - Selected Image to Share

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
 
     <!-- Intent Extras -->
     <string name="calling_activity">calling_activity</string>
+    <string name="selected_image">selected_image</string>
 
     <!-- activity names -->
     <string name="profile_activity">Profile Activity</string>
