part59 - New Profile Photo Using Camera

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,7 @@
     <!-- Intent Extras -->
     <string name="calling_activity">calling_activity</string>
     <string name="selected_image">selected_image</string>
+    <string name="selected_bitmap">selected_bitmap</string>
     <string name="return_to_fragment">return_to_fragment</string>
 
     <!-- activity names -->
