part65 - GridImage Selection Interface

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- fragment names -->
     <string name="edit_profile_fragment">Edit Profile</string>
+    <string name="view_post_fragment">View Post</string>
     <string name="sign_out_fragment">Sign Out</string>
     <string name="profile_fragment">Profile</string>
 
@@ -34,6 +35,9 @@
     <string name="selected_image">selected_image</string>
     <string name="selected_bitmap">selected_bitmap</string>
     <string name="return_to_fragment">return_to_fragment</string>
+
+    <!-- Bundle arg names -->
+    <string name="activity_number">activity_number</string>
 
     <!-- activity names -->
     <string name="profile_activity">Profile Activity</string>
